--- a/NoSolo/static/css/main.css
+++ b/NoSolo/static/css/main.css
@@ -3,3 +3,42 @@
     margin: 0;
 }
 
+.login-container {
+    width: 600px;
+    background-color: blue;
+    position: absolute;
+    top: 25%;
+    left: 35%;
+}
+
+.welcome-text {
+    font-weight: 800;
+    color: white;
+    font-size: 55px;
+    display: block;
+}
+
+.login-signup-nav {
+    display: flex;
+    font-size: 27px;
+    font-weight: 600;
+    padding-top: 30px;
+
+}
+
+.login-container-login-btn,
+.login-container-signup-btn {
+    color: white;
+}
+
+.login-container-login-btn {
+    margin-right: 20px;
+    border-color: #7b47ff;
+    border-width: 9px;
+    border-bottom-style: solid;
+}
+
+.form-control {
+    background-color: aquamarine;
+    color: red;
+}
